<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EGGProxy</string>
    <string name="menu_item_switch">代理</string>
    <string name="menu_item_setting">设置</string>
    <string name="menu_item_about">关于</string>
    <string name="menu_item_exit">退出</string>
    <string name="config_url">配置地址</string>
    <string name="config_not_set_value">未设置</string>
    <string name="config_url_scan">扫描二维码</string>
    <string name="config_url_manual">手动输入</string>
    <string name="config_url_scan_hint">扫描配置地址的二维码</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_more">更多&#8230;</string>
    <string name="vpn_connected_status">已连接</string>
    <string name="vpn_disconnected_status">已断开</string>
    <string name="about_info">SmartProxy是一款工作在Android 4.0及以上系统的TCP透明代理客户端软件，无需ROOT权限。它根据配置文件的规则来决定使用代理还是直连。最关键的是能防DNS污染，永不掉线，还很省电。</string>
    <string name="exit_confirm_info">这将会断开VPN连接，确定要退出吗？</string>
    <string name="err_invalid_url">无效的配置地址</string>
    <string name="config_url_hint">URL或本地文件路径</string>
    <string name="default_dns">114.114.114.114</string>
    <string name="dns_set_text">DNS设置：</string>
    <string name="dns_set">请输入DNS地址</string>
    <string name="NoNeed_text">白名单设置：</string>
    <string name="NoNeed_set">输入白名单ip，空格隔开</string>
    <string name="save">保存</string>
</resources>
